--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
   <body>
     <header>
       <h1>Curriculum Vitae de Lionel Messi</h1>
+      <nav>
+        <a href="./Ejercicio2.html">Ir a Programación</a>
+
+        <a href="./Ejercicio3.html">Ir al Formulario</a>
+      </nav>
     </header>
     <main>
       <section>
@@ -42,12 +47,6 @@
               2022: <strong>Copa Mundial de la FIFA - Qatar 2022</strong>
             </li>
           </ul>
-        </div>
-        <div>
-          <a href="./Ejercicio2.html">Ir a Programación</a>
-        </div>
-        <div>
-          <a href="./Ejercicio3.html">Ir al Formulario</a>
         </div>
       </section>
     </main>
